# deep_grasp_demo

./: .gitignore  deep_grasp_demo_attempt2.cpp
deep_grasp_task/: CMakeLists.txt  package.xml
deep_grasp_task/config/: kinova_object.yaml
deep_grasp_task/config/calib/: camera.yaml
deep_grasp_task/include/deep_grasp_task/: deep_grasp_demo.h
deep_grasp_task/src/: deep_grasp_demo.cpp  deep_pick_place_task.cpp
moveit_task_constructor_dexnet/config/: dexnet_config.yaml
moveit_task_constructor_gpd/: CMakeLists.txt  package.xml
moveit_task_constructor_gpd/config/: gpd_config.yaml
moveit_task_constructor_gpd/include/moveit_task_constructor_gpd/: cloud_utils.h  grasp_detection.h
moveit_task_constructor_gpd/launch/: gpd_demo.launch
moveit_task_constructor_gpd/src/: cloud_server.cpp  grasp_cloud_detection.cpp  grasp_detection.cpp
moveit_task_constructor_gpd/src/moveit_task_constructor_gpd/: cloud_utils.cpp
