<?xml version="1.0"?>
<package format="2">
  <name>deep_grasp_task</name>
  <version>0.0.1</version>
  <description>Constucts a pick place task using deep learning for grasp synthesis with a Kinova Jaco 2 arm</description>

  <maintainer email="avazahedi2023@u.northwestern.edu">Ava Zahedi</maintainer>
  <author email="avazahedi2023@u.northwestern.edu">Ava Zahedi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>rviz_marker_tools</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>moveit_task_constructor_demo</exec_depend>
  <exec_depend>j2s7s300_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
